<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="7dp"
    android:background="@drawable/search_result_shape"
    android:elevation="10dp"
    android:orientation="horizontal">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/eventImage"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_gravity="center"
        android:padding="15dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedCornerImageView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/dateandtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_and_time"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>
