<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#354553"
        android:padding="15dp"
        android:weightSum="15"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="12"
            android:background="@drawable/search_bar_shape"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="5dp"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="10dp"
            android:text="@string/swift"
            android:textColor="@color/white"
            android:textColorHint="#82858c" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="7dp"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>

</LinearLayout>

